Artefact: schemas: fix requirements

--- a/system/artefacts/schemas/golang-project-distribution-exported-api.json
+++ b/system/artefacts/schemas/golang-project-distribution-exported-api.json
@@ -167,7 +167,7 @@
 			"minItems": 1
 		}
 	},
-	"required": ["artefact", "project", "commit", "packages"],
+	"required": ["artefact", "project", "commit", "packages", "product", "distribution", "build", "rpm"],
 	"definitions": {
 		"identifier": {
 			"type": "object",
