schemas: qualifier -> quantifier

--- a/system/artefacts/schemas/golang-project-distribution-packages.json
+++ b/system/artefacts/schemas/golang-project-distribution-packages.json
@@ -92,7 +92,7 @@
 								"uniqueItems": true
 							}
 						},
-						"required": ["package", "qualifier", "dependencies"]
+						"required": ["package", "quantifier", "dependencies"]
 					},
 					"minItems": 1,
 					"uniqueItems": true
