--- a/system/artefacts/schemas/golang-project-packages.json
+++ b/system/artefacts/schemas/golang-project-packages.json
@@ -77,7 +77,7 @@
 								"uniqueItems": true
 							}
 						},
-						"required": ["package", "qualifier", "dependencies"]
+						"required": ["package", "quantifier", "dependencies"]
 					},
 					"minItems": 1,
 					"uniqueItems": true
