Replace "quantifier" with "qualifier" in artefact schemas

--- a/system/artefacts/schemas/golang-project-distribution-packages.json
+++ b/system/artefacts/schemas/golang-project-distribution-packages.json
@@ -61,7 +61,7 @@
 								"type": "string",
 								"description": "package name"
 							},
-							"quantifier": {
+							"qualifier": {
 								"type": "string",
 								"description": "imported package qualifier"
 							},
@@ -92,7 +92,7 @@
 								"uniqueItems": true
 							}
 						},
-						"required": ["package", "quantifier", "dependencies"]
+						"required": ["package", "qualifier", "dependencies"]
 					},
 					"minItems": 1,
 					"uniqueItems": true
