schemas: golang-project*-packages artefact: some project defines only main package (e.g. github.com/tools/godep)

--- a/system/artefacts/schemas/golang-project-distribution-exported-api.json
+++ b/system/artefacts/schemas/golang-project-distribution-exported-api.json
@@ -163,8 +163,7 @@
 					}
 				}
 			},
-			"uniqueItems": true,
-			"minItems": 1
+			"uniqueItems": true
 		}
 	},
 	"required": ["artefact", "project", "commit", "packages", "product", "distribution", "build", "rpm"],
