--- a/system/artefacts/schemas/golang-project-exported-api.json
+++ b/system/artefacts/schemas/golang-project-exported-api.json
@@ -147,8 +147,7 @@
 					}
 				}
 			},
-			"uniqueItems": true,
-			"minItems": 1
+			"uniqueItems": true
 		}
 	},
 	"required": ["artefact", "project", "commit", "packages"],
