--- a/system/artefacts/schemas/golang-project-repository-info.json
+++ b/system/artefacts/schemas/golang-project-repository-info.json
@@ -1,48 +1,90 @@
 {
-  "$schema": "http://json-schema.org/draft-04/schema#",
-  "title": "Golang project repository info",
-  "description": "Repository basic information and list of commits",
-  "type": "object",
-  "properties": {
-    "artefact": {
-      "description": "Artefact name",
-      "type": "string"
-    },
-    "project": {
-      "description": "Project name",
-      "type": "string"
-    },
-    "repository": {
-      "description": "Repository name",
-      "type": "string"
-    },
-    "clone_url": {
-      "description": "Repository clone url",
-      "type": "string"
-    },
-    "branches": {
-      "description": "List of branches",
-      "type": "array",
-      "items": {
-        "description": "Branch name",
-        "type": "string"
-      }
-    },
-      "commits": {
-        "description": "List of commits",
-        "type": "array",
-        "items": {
-          "description": "Commit id",
-          "type": "string"
-        }
-      }
-    },
-  "required": [
-    "artefact",
-    "project",
-    "repository",
-    "clone_url",
-    "branches",
-    "commits"
-  ]
+	"$schema": "http://json-schema.org/draft-04/schema#",
+	"title": "Golang project repository info",
+	"description": "Repository basic information and list of commits",
+	"type": "object",
+	"properties": {
+		"artefact": {
+			"description": "Artefact name",
+			"type": "string"
+		},
+		"repository": {
+			"anyOf": [
+				{ "$ref": "#/definitions/github" },
+				{ "$ref": "#/definitions/bitbucket" }
+			]
+		},
+		"branches": {
+			"description": "List of branches",
+			"type": "array",
+			"items": {
+				"description": "Branch name",
+				"type": "string"
+			}
+		},
+		"commits": {
+			"description": "List of commits",
+			"type": "array",
+			"items": {
+				"description": "Commit hexsha",
+				"type": "string"
+			}
+		}
+	},
+	"required": [
+		"artefact",
+		"repository",
+		"branches",
+		"commits"
+	],
+	"definitions": {
+		"github": {
+			"description": "Github repository",
+			"type": "object",
+			"properties": {
+				"provider": {
+					"description": "Provider",
+					"type": "string",
+					"oneOf": [
+						{"enum": ["github"]}
+					]
+				},
+				"username": {
+					"description": "Github username",
+					"type": "string",
+					"minLength": 1
+				},
+				"project": {
+					"description": "Github project",
+					"type": "string",
+					"minLength": 1
+				}
+			},
+			"required": ["provider", "username", "project"]
+		},
+		"bitbucket": {
+			"description": "Bitbucket repository",
+			"type": "object",
+			"properties": {
+				"provider": {
+					"description": "Provider",
+					"type": "string",
+					"oneOf": [
+						{"enum": ["bitbucket"]}
+					]
+				},
+				"username": {
+					"description": "Bitbucket username",
+					"type": "string",
+					"minLength": 1
+				},
+				"project": {
+					"description": "Bitbucket project",
+					"type": "string",
+					"minLength": 1
+				}
+			},
+			"required": ["provider", "username", "project"]
+		}
+	}
 }
