--- a/system/artefacts/schemas/golang-project-repository-info.json
+++ b/system/artefacts/schemas/golang-project-repository-info.json
@@ -38,7 +38,7 @@
 						"type": "integer"
 					}
 				},
-				"required": ["start_date", "end_date"]
+				"required": ["start_timestamp", "end_timestamp"]
 			}
 		},
 		"commits": {
