Remove unused variables/parametres from gofed/lib and update affected acts, plugins and other pieces of code

--- a/system/artefacts/schemas/golang-project-distribution-packages.json
+++ b/system/artefacts/schemas/golang-project-distribution-packages.json
@@ -8,10 +8,6 @@
 			"description": "Artefact name",
 			"type": "string"
 		},
-		"project": {
-			"description": "Project name",
-			"type": "string"
-		},
 		"commit": {
 			"description": "Project's commit",
 			"type": "string"
@@ -157,5 +153,5 @@
 			}
 		}
 	},
-	"required": ["artefact", "project", "commit", "data", "product", "distribution", "build", "rpm"]
+	"required": ["artefact", "commit", "data", "product", "distribution", "build", "rpm"]
 }
