Update schemas: remove unused properties and relax constraints

--- a/system/artefacts/schemas/golang-project-packages.json
+++ b/system/artefacts/schemas/golang-project-packages.json
@@ -135,5 +135,5 @@
 			"required": ["packages", "dependencies"]
 		}
 	},
-	"required": ["artefact", "project", "commit", "ipprefix", "data"]
+	"required": ["artefact", "ipprefix", "data"]
 }
