cache-golang-project-repository-commits schena: minor fix

--- a/system/artefacts/schemas/cache-golang-project-repository-commits.json
+++ b/system/artefacts/schemas/cache-golang-project-repository-commits.json
@@ -6,7 +6,7 @@
 	"properties": {
 		"artefact": {
 			"description": "Artefact name",
-			"type": "string"
+			"type": "string",
 			"oneOf": [
 				{"enum": ["cache-golang-project-repository-commits"]}
 			]
