golang-project-packages/exported-api artefacts: change "project" property to "repository" throughout the infra = acts, input schemas, specifiers, retrievers, storages, ...

--- a/system/artefacts/schemas/golang-project-packages.json
+++ b/system/artefacts/schemas/golang-project-packages.json
@@ -8,9 +8,11 @@
 			"description": "Artefact name",
 			"type": "string"
 		},
-		"project": {
-			"description": "Repository project name",
-			"type": "string"
+		"repository": {
+			"anyOf": [
+				{ "$ref": "#/definitions/github" },
+				{ "$ref": "#/definitions/bitbucket" }
+			]
 		},
 		"commit": {
 			"description": "Repository project commit",
@@ -135,5 +137,55 @@
 			"required": ["packages", "dependencies"]
 		}
 	},
-	"required": ["artefact", "ipprefix", "data"]
+	"required": ["artefact", "ipprefix", "data"],
+	"definitions": {
+		"github": {
+			"description": "Github repository",
+			"type": "object",
+			"properties": {
+				"provider": {
+					"description": "Provider",
+					"type": "string",
+					"oneOf": [
+						{"enum": ["github"]}
+					]
+				},
+				"username": {
+					"description": "Github username",
+					"type": "string",
+					"minLength": 1
+				},
+				"project": {
+					"description": "Github project",
+					"type": "string",
+					"minLength": 1
+				}
+			},
+			"required": ["provider", "username", "project"]
+		},
+		"bitbucket": {
+			"description": "Bitbucket repository",
+			"type": "object",
+			"properties": {
+				"provider": {
+					"description": "Provider",
+					"type": "string",
+					"oneOf": [
+						{"enum": ["bitbucket"]}
+					]
+				},
+				"username": {
+					"description": "Bitbucket username",
+					"type": "string",
+					"minLength": 1
+				},
+				"project": {
+					"description": "Bitbucket project",
+					"type": "string",
+					"minLength": 1
+				}
+			},
+			"required": ["provider", "username", "project"]
+		}
+	}
 }
